--- a/package.json
+++ b/package.json
@@ -3,28 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@thirdweb-dev/react": "^3.4.1",
-    "@thirdweb-dev/sdk": "^3.4.1",
+    "@thirdweb-dev/react": "^3.16.5",
+    "@thirdweb-dev/sdk": "^3.10.67",
+    "@thirdweb-dev/wallets": "^2.5.39",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "assert": "^2.1.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
+    "browserify-zlib": "^0.2.0",
+    "customize-cra": "^1.0.0",
     "ethers": "^5.7.2",
+    "https-browserify": "^1.0.0",
     "json-rpc-engine": "^6.1.0",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
